--- a/Client/src/components/styles/HomepageContent.module.css
+++ b/Client/src/components/styles/HomepageContent.module.css
@@ -13,11 +13,13 @@
  * TEMPLATE: #0ef6cc
  * */
 .whole{
-    height: 500vh;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 .main-container{
     width: 100vw;
-    height: 90vh;
+    height: 75vh;
     background-color: #262626;
     display: flex;
     padding: 50px 120px;
@@ -25,15 +27,27 @@
 
 .main-left{
     width: 60%;
-    border: 1px solid red;
+    padding: 20px 10px;
+    color: #efefef;
+    position: relative;
 }
-
+.main-sub{
+    font-size: 28px;
+}
+.main-me{
+    position: absolute;
+    bottom: 10px;
+    right: -100px;
+    width: 47%;
+}
+.main-title{
+    font-size: 48px;
+}
 .main-list{
     width: 40%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
 }
 
 .button-group{
@@ -41,16 +55,17 @@
     display: flex;
     margin: auto;
     flex-direction: column;
-    justify-content: space-between;
+    padding: 50px 0px;
 }
 
 .button-group button{
     transition: 350ms;
+    margin-bottom: 20px;
     color: #efefef;
     cursor: pointer;
     font-size: 24px;
     font-weight: 500;
-    width: 200px;
+    min-width: 200px;
     background-color: #ce1c1b;
     border: 2px solid #ce1c1b;
     border-radius: 8px;
@@ -68,7 +83,7 @@
 }
 
 .stack-outer{
-    height: auto;
+    height: 25vh;
     background-color: #1b1b1b;
     padding: 30px 120px;
     box-shadow: inset 0px 4px 8px rgba(0, 0, 0, 0.45),
@@ -78,12 +93,27 @@
 .stack-inner{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.45);
     border: 1px solid transparent;
-    height: 10vh;
+    height: 190px;
+    width: 85%;
+    margin: auto;
     background-color: #262626;
     border-radius: 50px;
+    padding: 10px 20px;
+    color: #efefef;
+    position: relative;
 }
 
-.about-me{
-    height: 100vh;
-    background-color: #262626;
+.imagecontainer{
+    position:absolute;
+    display: flex;
+    width: 85%;
+    right: 0px;
+    top: 20px
 }
+.imagecontainer img{
+    width: 170px;
+    border-radius: 20px;
+    height: 150px;
+    margin-right: 30px;
+}
+
